Add statusbar widget to show boolean settings
Adds a new widget that can be displayed in the statusbar to show the
state of arbitrary boolean settings for the current URL. Some boolean
settings actually support a third value `ask`. Those are partially
supported in that since the setting isn't explicitly configured for that
URL then it will show as not activated. I suspect users would prefer it
show the actual activation state of that setting for the current tab
though. Since, presumably, all of the BoolAsk type settings map to an
attribute in `websettings.AbstractSettings` we could use `testAttribute`
to check that.

It maps settings to "indicators", which are arbitrary strings, expected
to a single character. If the setting is enabled for the current URL the
indicator is shown in the widget, if not then it isn't. For example if
your `settings.widget.content` setting was

    '["S|content.javascript.enabled", "G|content.webgl", "L|content.geolocation",]'

You would have an additional widget before the scroll indicator that
would show something like `[]` if the page didn't have javascript
enabled or webgl enabled and geolocation was either false or ask. Or it
might show `[SL]` if javascript and geolocation were enabled.

I tested to see if unicode symbols like ROUND PUSHPIN could be used (for
a geolocation indicator) but that doesn't work because:

* if using autoconfig.yml pyYAML complains
* if using config.py `BaseType._validate_surrogate_escapes()` complains
  about surrogate escapes. And where that is printed out from claims
  json.dump can't handle them but `json.loads(json.dumps("📍"))` works
  just fine.

Adds a new config option set statusbar settings widget

It's a list of strings. Strings should be in a form like
`S|content.javascript.enabled` where `S` will be shown when javascript is
enabled for the current page and wont be shown when it isn't.

The `ValueError` try/catch in `parse_config()` catches both when the
specified sitting isn't a boolean one and t

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -317,6 +317,7 @@
 |<<spellcheck.languages,spellcheck.languages>>|Languages to use for spell checking.
 |<<statusbar.padding,statusbar.padding>>|Padding (in pixels) for the statusbar.
 |<<statusbar.position,statusbar.position>>|Position of the status bar.
+|<<statusbar.settings,statusbar.settings>>|Which boolean settings to display in the statusbar settings widget.
 |<<statusbar.show,statusbar.show>>|When to show the statusbar.
 |<<statusbar.widgets,statusbar.widgets>>|List of widgets displayed in the statusbar.
 |<<tabs.background,tabs.background>>|Open new tabs (middleclick/ctrl+click) in the background.
@@ -4208,6 +4209,15 @@ Valid values:
 
 Default: +pass:[bottom]+
 
+[[statusbar.settings]]
+=== statusbar.settings
+Which boolean settings to display in the statusbar settings widget.
+Specified in the form indicator-string|setting.name where the indicator-string will be displayed when the setting is true.
+
+Type: <<types,List of String>>
+
+Default: empty
+
 [[statusbar.show]]
 === statusbar.show
 When to show the statusbar.
@@ -4240,6 +4250,7 @@ Valid values:
  * +progress+: Progress bar for the current page loading.
  * +text:foo+: Display the static text after the colon, `foo` in the example.
  * +clock+: Display current time. The format can be changed by adding a format string via `clock:...`. For supported format strings, see https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes[the Python datetime documentation].
+ * +settings+: Boolean settings state for the current page.
 
 Default: 
 
