--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -4212,9 +4212,9 @@ Default: +pass:[bottom]+
 [[statusbar.settings]]
 === statusbar.settings
 Which boolean settings to display in the statusbar settings widget.
-Specified in the form indicator-string|setting.name where the indicator-string will be displayed when the setting is true.
+The keys should be setting names and the values should be strings which are shown if the setting is true for the current tab.
 
-Type: <<types,List of String>>
+Type: <<types,StatusbarSettings>>
 
 Default: empty
 
@@ -4898,6 +4898,7 @@ See the documentation for `List`.
 |StatusbarWidget|A widget for the status bar.
 
 Allows some predefined widgets and custom text-widgets via text:$CONTENT.
+|StatusbarSettings|A mapping of settings to indicator strings.
 |String|A string value.
 
 See the setting's valid values for more information on allowed values.
