Update setting name
Thanks to ninewise!

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -1978,7 +1978,7 @@ Default: +pass:[auto]+
 === content.blocking.whitelist
 A list of patterns that should always be loaded, despite being blocked by the ad-/host-blocker.
 Local domains are always exempt from adblocking.
-Note this whitelists otherwise blocked requests, not first-party URLs. As an example, if `example.org` loads an ad from `ads.example.org`, the whitelist entry could be `https://ads.example.org/*`. If you want to disable the adblocker on a given page, use the `content.host_blocking.enabled` setting with a URL pattern instead.
+Note this whitelists otherwise blocked requests, not first-party URLs. As an example, if `example.org` loads an ad from `ads.example.org`, the whitelist entry could be `https://ads.example.org/*`. If you want to disable the adblocker on a given page, use the `content.blocking.enabled` setting with a URL pattern instead.
 
 Type: <<types,List of UrlPattern>>
 
