Drop support for Python 3.6.0
It has some subtle typing differences compared to 3.6.1, see e.g.
https://docs.python.org/3/library/typing.html#typing.NamedTuple

Also, we can't easily test it, it's unlikely to be in use anywhere
anyways, and various dependencies already dropped support for it or are
going to (e.g. PyQt 6).

See #4800

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -21,8 +21,8 @@ v2.0.0 (unreleased)
 Major changes
 ~~~~~~~~~~~~~
 
-- At least Python 3.6 is now required to run qutebrowser, support for Python
-  3.5 is dropped. Note that Python 3.5 is
+- At least Python 3.6.1 is now required to run qutebrowser, support for Python
+  3.5 (and 3.6.0) is dropped. Note that Python 3.5 is
   https://www.python.org/downloads/release/python-3510/[no longer supported
   upstream] since September 2020.
 - At least Qt/PyQt 5.12 is now required to run qutebrowser, support for 5.7 to
