--- a/README.asciidoc
+++ b/README.asciidoc
@@ -78,7 +78,7 @@ The following software and libraries are required to run qutebrowser:
 * https://www.qt.io/[Qt] 5.12.0 or newer (5.12 LTS or 5.15 recommended)
   with the following modules:
   - QtCore / qtbase
-  - QtQuick (part of qtbase in some distributions)
+  - QtQuick (part of qtbase or qtdeclarative in some distributions)
   - QtSQL (part of qtbase in some distributions)
   - QtOpenGL
   - QtWebEngine, or
