--- a/README.asciidoc
+++ b/README.asciidoc
@@ -96,9 +96,11 @@ The following software and libraries are required to run qutebrowser:
 * http://jinja.pocoo.org/[jinja2]
 * http://pygments.org/[pygments]
 * https://github.com/yaml/pyyaml[PyYAML]
-* https://www.attrs.org/[attrs]
-* https://importlib-resources.readthedocs.io/[importlib_resources] (on Python
-  3.8 or older)
+
+On older Python versions (3.6/3.7/3.8), the following backports are also required:
+
+* https://importlib-resources.readthedocs.io/[importlib_resources] (Python 3.8 or older)
+* https://github.com/ericvsmith/dataclasses[dataclasses] (Python 3.6 only)
 
 The following libraries are optional:
 
