--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -170,6 +170,8 @@ Fixed
   contains a proper extension. Before this fix, qutebrowser would use the URL's
   data contents as filename with QtWebEngine; or "binary blob" with the Qt network
   stack.
+- When `:tab-only` is run before a tab is available, an error is now shown
+  instead of crashing.
 - TODO: Due to a long-standing bug in the `pkg_resources` dependency, it caused
   qutebrowser's startup to slow down by around 150ms-1s (heavily depending on
   the system). Since the dependency is now removed, qutebrowser's startup time
