--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -51,7 +51,8 @@ Major changes
   with a newer version of Qt/PyQt.
 - New optional dependency on the Python `adblock` library, which is now used to
   integrate Brave's Rust adblocker library, if the `adblock` module is available.
-- Windows 7 is not supported anymore by the Windows binaries.
+  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same
+  blocking technique it used before this release.
 - The (formerly optional) `cssutils` dependency is now removed. It was only
   needed for improved behavior in corner cases when using `:download --mhtml`
   with the (non-default) QtWebKit backend, and as such it's unlikely anyone is
@@ -70,6 +71,8 @@ Major changes
   thus requiring the backports for those versions as well.
 - The former dependency on the `attrs`/`attr` package is now dropped.
 - On Python 3.6, a new dependency on the `dataclasses` backport is now required.
+- Windows 7 is not supported anymore by the Windows binaries.
+- TODO: The Windows and macOS binaries are now updated to Python 3.9.
 
 Removed
 ~~~~~~~
