--- a/doc/faq.asciidoc
+++ b/doc/faq.asciidoc
@@ -97,9 +97,9 @@ security bugs, please contact me directly at mail@qutebrowser.org, GPG ID
 https://www.the-compiler.org/pubkey.asc[0x916eb0c8fd55a072].
 
 Is there an ad blocker?::
-    There is a simple host-based ad blocker that takes `/etc/hosts`-like lists.
+    There is a simple host-based ad blocker that takes `/etc/hosts`-like lists. Host blocking blocks entire hosts.
 +
-More advanced ad blockers can have a big impact on browsing speed and https://blog.mozilla.org/nnethercote/2014/05/14/adblock-pluss-effect-on-firefoxs-memory-usage/[RAM usage], so implementing support for AdBlock Plus-like lists is not a priority.
+While more advanced ad blockers can block first party ads (as long as the network request is blockable, there's no cosmetic filtering yet) they can have a big impact on browsing speed and https://blog.mozilla.org/nnethercote/2014/05/14/adblock-pluss-effect-on-firefoxs-memory-usage/[RAM usage], so implementing support for AdBlock Plus-like lists is not a priority.
 
 How can I get No-Script-like behavior?::
     To disable JavaScript by default:
