--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -101,6 +101,10 @@ Added
    * `content.blocking.adblock.lists` to configure ABP-like lists to use.
 - New `qt.environ` setting which makes it easier to set/unset environment
   variables for qutebrowser.
+- New settings to use an external file picker (such as ranger or vifm):
+  * `fileselect.handler` (`default` or `external`)
+  * `fileselect.multiple_files.command`
+  * `fileselect.single_file.command`
 - When QtWebEngine has been updated but PyQtWebEngine hasn't yet, the dark mode
   settings might stop working. As a (currently undocumented) escape hatch, this
   version adds a `QUTE_DARKMODE_VARIANT=qt_515_2` environment variable which can
