--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -204,9 +204,9 @@
 |<<downloads.remove_finished,downloads.remove_finished>>|Duration (in milliseconds) to wait before removing finished downloads.
 |<<editor.command,editor.command>>|Editor (and arguments) to use for the `open-editor` command.
 |<<editor.encoding,editor.encoding>>|Encoding to use for the editor.
-|<<fileselect.handler,fileselect.handler>>|Handler for selecting file(s) in forms.
+|<<fileselect.handler,fileselect.handler>>|Handler for selecting file(s) in forms. If `external`, then the commands specified by `fileselect.single_file.command` and `fileselect.multiple_files.command` are used to select one or multiple files respectively.
 |<<fileselect.multiple_files.command,fileselect.multiple_files.command>>|Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file, separated by newlines.
-|<<fileselect.single_file.command,fileselect.single_file.command>>|Command (and arguments) to use for selecting a file in forms. The command should write the selected file path to the specified file.
+|<<fileselect.single_file.command,fileselect.single_file.command>>|Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file.
 |<<fonts.completion.category,fonts.completion.category>>|Font used in the completion categories.
 |<<fonts.completion.entry,fonts.completion.entry>>|Font used in the completion widget.
 |<<fonts.contextmenu,fonts.contextmenu>>|Font used for the context menu.
@@ -2774,7 +2774,7 @@ Default: +pass:[utf-8]+
 
 [[fileselect.handler]]
 === fileselect.handler
-Handler for selecting file(s) in forms.
+Handler for selecting file(s) in forms. If `external`, then the commands specified by `fileselect.single_file.command` and `fileselect.multiple_files.command` are used to select one or multiple files respectively.
 
 Type: <<types,String>>
 
@@ -2797,11 +2797,11 @@ Default:
 
 - +pass:[xterm]+
 - +pass:[-e]+
-- +pass:[export COLUMNS= LINES=;ranger --choosefiles={}]+
+- +pass:[ranger --choosefiles={}]+
 
 [[fileselect.single_file.command]]
 === fileselect.single_file.command
-Command (and arguments) to use for selecting a file in forms. The command should write the selected file path to the specified file.
+Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file.
 The following placeholders are defined:
 * `{}`: Filename of the file to be written to.
 
@@ -2811,7 +2811,7 @@ Default:
 
 - +pass:[xterm]+
 - +pass:[-e]+
-- +pass:[export COLUMNS= LINES=;ranger --choosefile={}]+
+- +pass:[ranger --choosefile={}]+
 
 [[fonts.completion.category]]
 === fonts.completion.category
