--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -60,6 +60,7 @@ possible to run or bind multiple commands by separating them with `;;`.
 |<<download-remove,download-remove>>|Remove the last/[count]th download from the list.
 |<<download-retry,download-retry>>|Retry the first failed/[count]th download.
 |<<edit-command,edit-command>>|Open an editor to modify the current command.
+|<<edit-text,edit-text>>|Open an external editor with the currently selected form field.
 |<<edit-url,edit-url>>|Navigate to a url formed in an external editor.
 |<<enter-mode,enter-mode>>|Enter a key mode.
 |<<fake-key,fake-key>>|Send a fake keypress or key string to the website or qutebrowser.
@@ -85,7 +86,6 @@ possible to run or bind multiple commands by separating them with `;;`.
 |<<navigate,navigate>>|Open typical prev/next links or navigate using the URL path.
 |<<nop,nop>>|Do nothing.
 |<<open,open>>|Open a URL in the current/[count]th tab.
-|<<open-editor,open-editor>>|Open an external editor with the currently selected form field.
 |<<print,print>>|Print the current/[count]th tab.
 |<<quickmark-add,quickmark-add>>|Add a new quickmark.
 |<<quickmark-del,quickmark-del>>|Delete a quickmark.
@@ -491,6 +491,12 @@ Open an editor to modify the current command.
 
 ==== optional arguments
 * +*-r*+, +*--run*+: Run the command if the editor exits successfully.
+
+[[edit-text]]
+=== edit-text
+Open an external editor with the currently selected form field.
+
+The editor which should be launched can be configured via the `editor.command` config option.
 
 [[edit-url]]
 === edit-url
@@ -914,12 +920,6 @@ The tab index to open the URL in.
 
 ==== note
 * This command does not split arguments after the last argument and handles quotes literally.
-
-[[open-editor]]
-=== open-editor
-Open an external editor with the currently selected form field.
-
-The editor which should be launched can be configured via the `editor.command` config option.
 
 [[print]]
 === print
