--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -116,6 +116,8 @@ Added
   via a new `filesystem` entry in `completion.open_categories`. Also, a new
   `completion.favorite_paths` setting was added which can be used to add paths to
   show when `:open` is used without any input.
+- New `QUTE_VERSION` variable for userscripts, which can be used to read
+  qutebrowser's version.
 - New userscripts:
   * `kodi` to play videos in Kodi
   * `qr` to generate a QR code of the current URL
