--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -529,7 +529,7 @@ Default:
 * +pass:[&lt;Ctrl-F&gt;]+: +pass:[hint links]+
 * +pass:[&lt;Ctrl-R&gt;]+: +pass:[hint --rapid links tab-bg]+
 * +pass:[&lt;Escape&gt;]+: +pass:[leave-mode]+
-* +pass:[&lt;Return&gt;]+: +pass:[follow-hint]+
+* +pass:[&lt;Return&gt;]+: +pass:[hint-follow]+
 - +pass:[insert]+:
 
 * +pass:[&lt;Ctrl-E&gt;]+: +pass:[edit-text]+
